minor fix for gap state

--- a/src/components/GapInput/GapInput.css
+++ b/src/components/GapInput/GapInput.css
@@ -1,13 +1,18 @@
 .gap-input-container {
-    margin-top: 10px;
-    text-align: center;
+    margin-top: 20px;
+    width: var(--count-wrapper-width);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
 
 .gap-input {
     -moz-appearance: textfield;
     appearance: textfield;
     margin-top: 10px;
-    max-width: 60px;
+    width: 100%;
     height: 30px;
     padding: 5px;
     text-align: center;
@@ -17,4 +22,11 @@
 
 .gap-input::-webkit-inner-spin-button {
     -webkit-appearance: none;
+}
+
+.gap-input-container > button {
+    margin-top: 10px;
+    width: 100%;
+    height: 40px;
+    font-size: 0.85rem;
 }
